--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,7 +17,9 @@ management:
 logging:
   level:
     org:
-      apache:
-        hc:
-          client5:
-            http: DEBUG
+      springframework:
+        web:
+          service: TRACE
+      titan:
+        proxy: DEBUG
+
