--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ management:
       enabled: true
   endpoint:
     env:
-      enabled: true
+      access: read_only
     health:
       probes:
         enabled: true
