--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
 	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
+//	testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
