--- a/src/test/resources/contracts/org.titan.proxy/jenkins-contract-producer/1.0.0/jenkins.yml
+++ b/src/test/resources/contracts/org.titan.proxy/jenkins-contract-producer/1.0.0/jenkins.yml
@@ -1,20 +1,17 @@
-request: # (1)
-  method: PUT # (2)
-  url: /yamlfraudcheck # (3)
-  body: # (4)
-    "client.id": 1234567890
-    loanAmount: 99999
-  headers: # (5)
+request:
+  method: POST
+  url: /github-webhook/
+  headers:
     Content-Type: application/json
   matchers:
     body:
       - path: $.['client.id'] # (6)
         type: by_regex
         value: "[0-9]{10}"
-response: # (7)
-  status: 200 # (8)
-  body:  # (9)
+response:
+  status: 200
+  body:
     fraudCheckStatus: "FRAUD"
     "rejection.reason": "Amount too high"
-  headers: # (10)
+  headers:
     Content-Type: application/json
