--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,13 @@ management:
       probes:
         enabled: true
 
+captain-hook:
+  jenkins:
+    apim:
+      url: http://dev-jenkins.dev-jenkins.svc.cluster.local:8080
+    core-engineering:
+      url: http://jenkins.sandbox-ci.svc.cluster.local:8080
+
 logging:
   level:
     org:
