--- a/src/test/resources/contracts/org.titan.proxy/jenkins-contract-producer/1.0.0/jenkins.yml
+++ b/src/test/resources/contracts/org.titan.proxy/jenkins-contract-producer/1.0.0/jenkins.yml
@@ -2,7 +2,7 @@ request:
   method: POST
   url: /github-webhook/
   headers:
-    Content-Type: application/json
+    Content-Type: application/json;charset=UTF-8
 response:
   status: 200
   headers:
