--- a/src/test/resources/contracts/org.titan.proxy/jenkins-contract-producer/1.0.0/jenkins.yml
+++ b/src/test/resources/contracts/org.titan.proxy/jenkins-contract-producer/1.0.0/jenkins.yml
@@ -3,6 +3,11 @@ request:
   url: /github-webhook/
   headers:
     Content-Type: application/json;charset=UTF-8
+  matchers:
+    body:
+      - path: $.food
+        type: by_regex
+        value: baddr
 response:
   status: 200
   headers:
