--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,7 +26,7 @@ logging:
     org:
       springframework:
         web:
-          service: TRACE
+          service: INFO
       titan:
-        proxy: DEBUG
+        proxy: INFO
 
