add ignore revoke

--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
 	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
-//	testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
